<resources>
    <string name="app_name">발자국</string>
    <string name="menu_home">홈</string>
    <string name="menu_calendar">산책기록</string>
    <string name="menu_course">코스추천</string>
    <string name="menu_mypage">마이페이지</string>
    <string name="action_cancel">취소</string>
    <string name="action_edit">편집</string>
    <string name="action_save">저장</string>
    <string name="action_delete">삭제</string>
    <string name="action_confirm">확인</string>
    <string name="action_next">다음</string>
    <string name="action_complete">완료</string>
    <string name="action_set">설정</string>
    <string name="action_update">수정</string>
    <string name="action_stop">중지</string>
    <string name="action_retry">재시도</string>
    <string name="action_not_agree">동의 안함</string>
    <string name="action_agree">동의</string>
    <string name="action_maintain_gps_access">위치 정보 권한 유지</string>
    <string name="action_change_gps_access">권한 변경</string>
    <string name="action_close">닫기</string>
    <string name="action_detail">자세히 보기</string>
    <string name="action_share">공유</string>
    <string name="action_reset">초기화</string>
    <string name="action_startwalk">산책 시작</string>
    <string name="action_gohome">홈으로 돌아가기</string>
    <string name="action_contactus">문의하기</string>
    <string name="msg_distacnce_unit">km</string>
    <string name="msg_calroie_unit">kcal</string>
    <string name="msg_avr_calroie_unit">kcal/day</string>
    <string name="msg_pace_unit">걸음/분</string>
    <string name="msg_min_eng_unit">min</string>
    <string name="msg_min_ko_unit">분</string>
    <string name="msg_height_unit">cm</string>
    <string name="msg_weight_unit">kg</string>
    <string name="msg_year_unit">년</string>
    <string name="msg_month_unit">월</string>
    <string name="msg_day_unit">일</string>
    <string name="msg_temp_unit">°C</string>
    <string name="msg_default">-</string>
    <string name="error_network">네트워크에 연결할 수 없습니다.</string>
    <string name="error_api_fail">오류가 발생했습니다. 다시 시도해 주세요.</string>
    <string name="error_gps_none">GPS를 사용할 수 없습니다.</string>
    <string name="error_sorry">앱 상에 문제가 발생했습니다. 최대한 빠르게 해결하겠습니다. 죄송합니다.</string>
    <string name="error_subtitle">ERROR</string>
    <string name="error_title">앗! 오류가 발생했어요</string>
    <string name="error_desc">서비스 이용에 불편을 드려 죄송합니다😭 \n잠시 후 다시 시도해 주세요!</string>
    <string name="msg_skip">skip ></string>
    <string name="action_start">시작하기</string>
    <string name="title_onboarding1">반가워요</string>
    <string name="msg_onboarding1">산책하러 오셨군요! 발자국에 오신걸 환영합니다</string>
    <string name="msg_img_onboarding1">산책은 가벼운 운동으로 제격인 동시에\n생각을 정리하거나 기분 전환에 좋은 활동이에요</string>
    <string name="title_onboarding2">산책 목표 설정하기</string>
    <string name="msg_onboarding2">산책할 요일과 목표 산책 시간을 선택해\n나만의 산책 목표를 세워 산책을 습관화할 수 있어요</string>
    <string name="title_onboarding3">산책 기록하기</string>
    <string name="msg_onboarding3">실시간 산책 동선을 기록하면서\n자유롭게 사진을 찍고 떠오른 생각을 남겨보아요</string>
    <string name="title_onboarding4">산책 일기 확인하기</string>
    <string name="msg_onboarding4">그동안의 산책과 생각들을 추억할 수 있어요</string>
    <string name="title_agree">약관동의</string>
    <string name="msg_agree_description">서비스 이용을 위해서 약관 동의가 필요해요</string>
    <string name="title_agree_use">이용약관 (필수)</string>
    <string name="title_agree_location">위치서비스 이용약관 (필수)</string>
    <string name="title_agree_user">개인정보 수집 이용 (필수)</string>
    <string name="title_agree_notification">앱 푸시 알림 수신 동의 (선택)</string>
    <string name="title_agree_all">모두 동의합니다</string>
    <string name="title_agreement_use">이용약관</string>
    <string name="title_agreement_location">위치 서비스 이용약관</string>
    <string name="title_agreement_user">개인정보 처리방침</string>
    <string name="msg_agreement_use">@string/agreement_use</string>
    <string name="msg_agreement_location">@string/agreement_location</string>
    <string name="msg_agreement_user">@string/agreement_user</string>
    <string name="title_login">로그인</string>
    <string name="msg_catchphrase">길위에 남기는 나만의 기록</string>
    <string name="msg_login_description">소셜 계정으로 간편하게 로그인할 수 있어요</string>
    <string name="title_kakaologin">카카오계정으로 로그인</string>
    <string name="title_googlelogin">구글계정으로 로그인</string>
    <string name="msg_nologin"><u>나중에 로그인할래요</u></string>
    <string name="msg_copyright">© 2021. 발자국 all right reserved.</string>
    <string name="title_register_info">정보를 입력해 주세요</string>
    <string name="msg_register_info">정보를 입력하면 더 정확한 서비스를 제공받을 수 있어요</string>
    <string name="msg_asterisk">*</string>
    <string name="title_register_info_nickname">닉네임</string>
    <string name="title_register_info_nickname_hint">닉네임을 입력해 주세요 (최대 8자)</string>
    <string name="title_register_info_gender">성별</string>
    <string name="title_register_info_gender_f">여</string>
    <string name="title_register_info_gender_m">남</string>
    <string name="title_register_info_gender_n">선택안함</string>
    <string name="title_register_info_birth">생년월일</string>
    <string name="title_register_info_birth_year_hint">1999</string>
    <string name="title_register_info_birth_month_hint">12</string>
    <string name="title_register_info_birth_day_hint">31</string>
    <string name="title_register_info_wheight">키/몸무게</string>
    <string name="title_register_info_height_hint">170</string>
    <string name="title_register_info_weight_hint">50</string>
    <string name="error_register_info_nickname">닉네임은 최대 8자까지 가능해요</string>
    <string name="msg_badge">뱃지를 획득했어요!</string>
    <string name="msg_home_hello">안녕하세요, </string>
    <string name="msg_home_userunit">님!</string>
    <string name="msg_home_greetings">오늘도 발자국을 남겨볼까요?</string>
    <string name="title_home_achieve">달성률</string>
    <string name="title_home_goal">오늘 목표</string>
    <string name="title_mon">Mon</string>
    <string name="title_tue">Tue</string>
    <string name="title_wed">Wed</string>
    <string name="title_thu">Thu</string>
    <string name="title_fri">Fri</string>
    <string name="title_sat">Sat</string>
    <string name="title_sun">Sun</string>
    <string name="title_realtime_record">실시간 기록</string>
    <string name="title_walktime">산책시간</string>
    <string name="title_distance">거리</string>
    <string name="title_calorie">칼로리</string>
    <string name="title_pace">페이스</string>
    <string name="title_sum_walktime">누적 산책시간</string>
    <string name="title_sum_distance">누적 거리</string>
    <string name="title_avr_calorie">평균 칼로리</string>
    <string name="msg_question">발자국은 최대 9개까지 남길 수 있어요</string>
    <string name="msg_notification">발자국을 남기거나 산책을 종료하려면 터치해 주세요.</string>
    <string name="title_course_info">산책중인 코스 정보</string>
    <string name="title_show_course_in_map">지도에서 코스 보기</string>
    <string name="action_store_walk">산책 저장</string>
    <string name="action_add_footprint">발자국 남기기</string>
    <string name="action_pause">일시정지</string>
    <string name="title_goal_walk_time_direct_setting">목표산책시간 직접설정</string>
    <string name="title_hour">시간</string>
    <string name="title_minute">분</string>
    <string name="title_update">발자국 업데이트 안내</string>
    <string name="action_withdrawal">탈퇴하기</string>
    <string name="action_store">스토어 이동</string>
    <string name="action_follow_up">이어서 작성하기</string>
    <string name="action_later">나중에</string>
    <string name="msg_delete_footprint">해당 발자국을 삭제할까요?</string>
    <string name="msg_save_walk">‘OO번째 산책’을 저장할까요?</string>
    <string name="msg_cancel_walk">‘OO번째 산책’ 작성을 취소할까요?</string>
    <string name="msg_stop_walk">‘OO번째 산책’ 작성을 취소할까요?</string>
    <string name="msg_stop_realtime_record">실시간 기록을 중지할까요?</string>
    <string name="msg_add_photo_or_writing">사진이나 글을 추가해주세요.</string>
    <string name="msg_leave_footprint">발자국을 남겼어요.</string>
    <string name="msg_update_footprint">발자국을 수정했어요.</string>
    <string name="msg_change_representative_badge">대표뱃지로 설정할까요?</string>
    <string name="msg_logout">발자국에서 로그아웃하시겠어요?</string>
    <string name="msg_logout_desc">*로그인하면 기록을 다시 볼 수 있어요\n(로그아웃이 정상적으로 이뤄지지 않을 경우\n앱을 지우고 다시 다운로드해주세요.)</string>
    <string name="msg_withdrawal">정말 발자국을 탈퇴하시겠어요?</string>
    <string name="msg_withdrawal_desc">*모든 기록이 삭제되고 복구할 수 없어요</string>
    <string name="msg_success_update_goal">다음달 목표를 변경했어요</string>
    <string name="msg_gps">발자국은 앱이 종료되었거나 사용 중이 아닐 때도 위치 데이터를 수집하여 정확한 날씨 정보 제공 기능과 산책 중 이동 경로 표시, 실시간 산책 기록 기능을 지원합니다.</string>
    <string name="msg_foreground_gps">발자국은 위치 데이터를 수집하여 정확한 날씨 정보 제공 기능과 산책 중 이동 경로 표시, 실시간 산책 기록 기능을 지원합니다.</string>
    <string name="msg_background_gps">발자국의 위치 액세스 권한을 항상 허용으로 변경하시면 앱이 종료되었거나 사용 중이 아닐 때도 실시간 산책 관련 기능을 지원합니다. 변경하시겠습니까?</string>
    <string name="msg_denied_foreground_gps">위치 권한 거절로 위치 정보를 활용하는 일부 기능이 제한됩니다. [설정] > [권한] 에서 위치 권한을 허용해야 제한된 기능을 사용할 수 있습니다.</string>
    <string name="msg_denied_walk_for_foreground_gps">산책을 시작하기 위해서는 위치 권한이 필요합니다. [설정] > [권한] 에서 위치 권한을 허용해야 제한된 기능을 사용할 수 있습니다.</string>
    <string name="msg_denied_walk_for_background_gps">산책을 시작하기 위해서는 백그라운드 위치 권한이 필요합니다. [설정] > [권한] 에서 위치 권한을 항상 허용으로 변경해 주세요.</string>
    <string name="msg_denied_update">업데이트 후 사용 가능합니다.</string>
    <string name="msg_temp_walk">임시 저장된 산책 기록이 있어요.\n이어서 기록을 작성하시겠어요?</string>
    <string name="msg_course_share">이 코스를 다른사람들에게 공유할까요?</string>
    <string name="error_post_cnt_exceed">발자국은 최대 9개까지 남길 수 있어요.</string>
    <string name="error_set_goal_walk_time">목표 산책 시간을 설정해 주세요.</string>
    <string name="error_no_updating_goal">변경된 목표가 없어요</string>
    <string name="error_no_updating_content">변경된 내용이 없어요</string>
    <string name="title_course_review">코스 평가하기</string>
    <string name="msg_review_good">좋았어요!</string>
    <string name="msg_review_next">다음에</string>
    <string name="msg_declaration_report"><u>신고 레포트</u></string>
    <string name="title_walk_time">산책시간</string>
    <string name="title_calorie_unit">kcal</string>
    <string name="title_distance_unit">km</string>
    <string name="title_record_unit">회</string>
    <string name="title_view_more">더보기</string>
    <string name="title_view_short">간략히 보기</string>
    <string name="msg_save_walk_success">산책 정보가 저장되었어요.</string>
    <string name="title_leave_footprint">발자국 남기기</string>
    <string name="action_add_photo">사진 추가하기</string>
    <string name="action_delete_photo">사진 삭제하기</string>
    <string name="msg_input_tag">본문에 #을 이용해 태그를 입력해보세요! (최대 5개)</string>
    <string name="msg_save_post">기록이 저장되었습니다.</string>
    <string name="error_photo_cnt_exceeded">사진 첨부는 최대 5개까지 가능해요.</string>
    <string name="error_permission_denied">사진 촬영과 첨부를 위해 [설정>권한]에서 카메라 및 저장공간 권한을 허용해주세요.</string>
    <string name="msg_course_is_far">현재 위치와 코스의 거리가\n5km 이상이에요</string>
    <string name="msg_ask_course_walk_start">해당 코스로 산책을 시작하시겠어요?</string>
    <string name="action_go_back">돌아가기</string>
    <string name="action_yes_course_start">네, 산책을 시작할래요!</string>
    <string name="msg_set_goal">목표를 설정해 주세요</string>
    <string name="msg_set_gaol_desc">월 기준으로 목표를 설정할 수 있어요</string>
    <string name="title_goal_day">목표 요일</string>
    <string name="title_goal_walk_time">목표 산책 시간</string>
    <string name="msg_set_goal_time">목표시간을 선택해 주세요</string>
    <string name="title_goal_walk_slot">산책 시간대</string>
    <string name="msg_set_slot">시간대를 선택해 주세요</string>
    <string name="title_15_min">15분</string>
    <string name="title_30_min">30분</string>
    <string name="title_60_min">1시간</string>
    <string name="title_90_min">1시간반</string>
    <string name="title_direct_setting">직접설정</string>
    <string name="title_early_morning">이른 오전(5-8)</string>
    <string name="title_late_morning">늦은 오전(9-12)</string>
    <string name="title_early_afternoon">이른 오후(13-16)</string>
    <string name="title_late_afternoon">늦은 오후(17-20)</string>
    <string name="title_night">밤(21-0)</string>
    <string name="title_dawn">새벽(1-4)</string>
    <string name="title_different_every_time">매번 다름</string>
    <string name="title_view_course">코스 보기</string>
    <string name="title_update_course">코스 수정</string>
    <string name="title_delete_course">코스 삭제</string>
</resources>